Working on angel.co scraper